feat(core): add new replace operation
Adds a new replace sub-command to delete and recreate
all resources

Changes:
* add new CLI replace sub-command
* Refactors to simplify core API